# Research-Graph-Copilot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  mcp_runner.py
app/adapters/: arxiv.py  semantic_scholar.py
app/api/: routes.py
app/core/: __init__.py  config.py
app/models/: schemas.py
app/repositories/: file_store.py
app/services/: __init__.py  agent_client.py  benchmark_assets.py  briefings.py  extraction.py  graph_query.py  ingestion.py  mcp_server.py  neo4j_graph.py  normalization.py  openrouter.py  pipeline.py  retrieval.py
data/benchmark/: gold_questions.json  paper_seeds.json
docs/: evaluation.md  features.md  plan.md  schema.md  tasks.md
frontend/: next-env.d.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/briefings/[id]/: page.tsx
frontend/app/methods/[name]/: page.tsx
frontend/app/papers/[id]/: page.tsx
frontend/app/topics/[topic]/: page.tsx
frontend/components/: app-shell.tsx  entity-card.tsx  evidence-panel.tsx  query-form.tsx
frontend/lib/: api.ts
streamlit_app/: app.py
tests/: test_benchmark_assets.py  test_config.py  test_extraction.py  test_ingestion.py  test_normalization.py  test_schemas.py
