[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-research-copilot"
version = "0.1.0"
description = "AI research intelligence copilot using OpenRouter, Neo4j, GraphRAG, and MCP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "neo4j>=5.25.0",
  "neo4j-graphrag>=1.0.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "uvicorn>=0.30.0",
  "mcp>=1.2.0",
  "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
